# 3d-physicsengine

./: CMakeLists.txt  Makefile  README.md
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/console/: Console.h
src/game/: Game.h
src/input/: InputHandler.h
src/physics/: Ball.h  PhysicsBody.h  PhysicsWorld.h  Vector3.h
src/renderer/: Camera.h  Renderer.h
